# ladim2

./: .gitignore  README.rst  Tanker  artikler.txt  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py
doc/source/: application.rst  articles.rst  conf.py  configuration.rst  configuration_module.rst  forcing_plugin.rst  grid_plugin.rst  ibm_plugin.rst  index.rst  intro.rst  ladim_at_imr.rst  ladim_ecosyst.py  output.rst  postprocessing.rst  prog_lang.rst  release.rst
examples/: ruff.toml
ladim/: NOTATER  ROMS.py  ROMS2.py  __main__.py  analytical.py  circular.py  configure.py  forcing.py  grid.py  ibm.py  main.py  model.py  out_netcdf.py  output.py  release.py  sample.py  state.py  state2.py  stommel.py  stommel2.py  test_init.py  test_state.py  test_state2.py  timekeeper.py  tracker.py  trajectory.py  velocity.py  warm_start.py
ladim2/: ROMS.py  ROMS2.py  __init__.py  __main__.py  analytical.py  configure.py  forcing.py  forcing_ROMS.py  grid.py  grid_ROMS.py  ibm.py  main.py  model.py  out_nc_matrix.py  out_nc_ragged.py  out_netcdf.py  output.py  output_wrap.pybak  release.py  sample.py  state.py  test_state.py  timekeeper.py  timer.py  tracker.py  util_ROMS.py  warm_start.py
scripts/: ladim2
test/: grid0.py  rest_main.py  ruff.toml  test_ROMS2_read.py  test_ROMS_read.py  test_ROMS_velocity.py  test_ROMS_vertical.py  test_configure.py  test_examples.py  test_forcing_ROMS.py  test_grid.py  test_grid_ROMS.py  test_main.py  test_output.py  test_release.py  test_sample.py  test_sdepth.py  test_state.py  test_timekeeper.py  test_timer.py  test_tracker.py
(+111 files in other folders)
