[build-system]
requires = ["setuptools"]

[project]
name = "LADiM2"
authors = [
    {name = "Bjørn Ådlandsvik", email = "bjorn@hi.no"},
]
description = "Lagrangian Advection and Diffusion Model"
version = "2.0.0"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["oceanography", "particle tracking"]
license = {text = "MIT"}
classifiers = [
    "Development Status ::  4 - Beta",
    "Environment :: Console (Text Based)",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "numpy",
    "pyyaml",
    "tomli",
    "netCDF4",
    "pandas",
    "numba",
]

[project.optional-dependencies]
test =  ["pytest"]
examples = ["matplotlib", "postladim"]

[project.scripts]
ladim = "ladim.main:script"